css/the-educator.css
html {
   margin:0;
   padding:0;   
}
body {
   background:white;
   margin:0;
   padding:0;
}
header {
   background:white;
   width:100%;
   height:100px;
   margin:0;
}

.menu-top-menu {
   display:flex;
}

ul {
   list-style:none;
}
ul.menu{
   display:flex;
   gap:1rem;
}

/* to keep track of templates during dev */
.dev_notes {
   width:fit-content;
   color:lightgrey;
   font-size:.9rem;
   font-weight:100;
   border:solid 1px lightgrey;
   border-radius:.25rem;
   margin:.25rem;
   padding:.25rem;
}


/* 
   adapt outlinecss nav to wordpress menu structure 
*/

/* style selection of menu item on top nav */
li.menu-item {width:100%;}
li.menu-item a,
li.menu-item.current-menu-item > a {
   width:fit-content;
   border:solid 1px transparent;
}
/* li.menu-item:hover > a {
   border-bottom:solid 1px white;
}
li.menu-item.current-menu-item > a {
   border-bottom:solid 1px white;
} */

.list_style_bullets {
   list-style:circle;
}



/* 
   customizing Block Patterns 
*/


/* 
   Single Feature Columns
   -------------------------------------------------------------
   We build from WordPress media-text which only stacks at v. sm
   We want it consistent w/ two-feature-columns breakpoints etc.
   Also, image was distorted by resizing screen width.
*/
/*
   switch off grid at sm/mobile - permits stacking at <782px
*/
.te-single-feature-columns {
   display:unset;
}
/*
   to retain pattern block integrity, we want img to keep height
   Here, we force height but permit aspect to be retained (overflow permits x-cropping)
*/
.te-single-feature-columns figure, 
.te-single-feature-columns figure img {
   height:100%;
   overflow:hidden
}
.te-single-feature-columns figure img {
   object-fit: cover;
}
/* 
   reset grid (WordPress default)
   782px matches WordPress columns media break - consistency 
*/
@media screen and (min-width: 782px) {
   .te-single-feature-columns {
      display:grid;
   }
}


/* 
   Stacking Column Block Patterns
   -------------------------------------------------------------
   we incrse gap btwn 'columns' when stacking in sm/mobile for readability
*/
div.te-columns img {
   border-radius:.25rem;
}
div.te-columns > div.wp-block-column {
   margin-bottom:3rem;
}
@media screen and (min-width: 782px) {
   div.te-columns > div.wp-block-column {
      margin-bottom:0rem;
   }
}


/* 
future : 
- layout of text on columns when stacked retains height and spacing 
  of horizontal alignment - may look better more compact. 
*/



.te_card {
   border:solid 3px orange;
}





nav ul.menu .sub-menu li.menu-item:hover > a {
   text-decoration:none !important;

}

   
nav ul.sub-menu li.menu-item:hover > a {
   position:relative;
   /* outlinecss uses border to underline <a> for spacing */
   border:solid 1px transparent;
   text-decoration:none;
}

/* a {
   border:solid 1px white;
} */


/* 
dynamic underline on hover <a>
*/
nav ul.menu li > a::after {
   content:'';
   width:0%;
}
nav ul.sub-menu li.menu-item { 
   display:block;
}
nav ul.sub-menu li.menu-item > a,
footer a {
   display:block;
   position:relative;   /* required to position ::after */
   max-width:fit-content;
}
nav .menu a::after,
footer a::after {
   content:'';
   position:absolute;
   left:50%;
   width:0%;
   height:105%;
   border-bottom:solid 1px white;
   -webkit-transition:all .4s ease-in-out;
   transition:all .4s ease-in-out;
}
nav .menu > li > a:after {height:70%;}

nav .menu a:hover::after,
footer a:not(.custom-logo-link):hover::after {
   content:'';
   position:absolute;
   left:0%;
   width:100%;
   border-bottom:solid 1px white;
   /* -webkit-transition:all .4s ease-in-out;
   transition:all .4s ease-in-out; */
}


section.feature_tiles > ul > li.news_tile > h4{
   text-align:left;
   margin-top:.5rem;
   margin-left:.5rem;
   margin-right:.5rem;
   padding-right:auto;
}


/* 
debug template hierarchy! 
*/
.show_page_name {
   position:absolute;
   z-index:499;
   display:none;  /* disable on live */
   top:var(--nav_bar_height);
   right:.25rem;
   opacity:.4;
   color:black;
}
.show_page_name:hover {
   opacity:1;
   color:white;
}



section.te_template_parent_page {

   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;

   -webkit-box-orient:vertical;
   -webkit-box-direction:normal;
   -ms-flex-direction:column;
   flex-direction:column !important;

   width:100%;
   margin:auto;
}
section.te_template_parent_page a {
   white-space:wrap;
   text-decoration:none;
}
section.te_template_parent_page ul {   
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;

   -webkit-box-orient:horizontal;
   -webkit-box-direction:normal;
   -ms-flex-direction:row;
   flex-direction:row !important;

   flex-wrap:wrap;

   gap:.5rem;
}
section.te_template_parent_page ul li {
   margin-top:.5rem;
   text-align:center;
   border:solid 1px lightgrey;
   border-radius:.25rem;
   padding:.25rem;
   padding-left:.5rem;
   padding-right:.5rem;
}
section.te_template_parent_page img {
   width:100%;
}

/* layout */
section.te_template_parent_page div:nth-child(1) {
   width:100%;
   order:1;
   overflow-x:hidden;
   margin-left:auto;
   margin-right:auto;
}
section.te_template_parent_page div:nth-child(2) {
   order:3;
   width:100%;
}
section.te_template_parent_page div:nth-child(3) {
   width:100%;
   order:2;
}

@media screen and (min-width: 910px) {
   section.te_template_parent_page {

      display:-webkit-box;
      display:-ms-flexbox;
      display:flex;
   
      -webkit-box-orient:horizontal;
      -webkit-box-direction:normal;
      -ms-flex-direction:row;
      flex-direction:row !important;
   }
   section.te_template_parent_page ul {
      -webkit-box-orient:vertical;
      -webkit-box-direction:normal;
      -ms-flex-direction:column;
      flex-direction:column !important;
      padding:.25rem;

   }
   section.te_template_parent_page ul li {
      margin-top:.5rem;

   }
   section.te_template_parent_page img {
      width:unset;
      margin-top:2rem;
   }
   section.te_template_parent_page a {
      white-space:nowrap;
   }

   /* layout */
   section.te_template_parent_page div:nth-child(1) {
      width:20%;
      order:1;
   }
   section.te_template_parent_page div:nth-child(2) {
      width:60%;
      order:2;
   }
   section.te_template_parent_page div:nth-child(3) {
      width:20%;
      order:3;
   }
}

